# MathFacile

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build-and-test.yml  cd.yml  ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  dbsetup.js  fly.toml  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/config/: cors.ts
backend/src/controllers/: auth.controller.ts
backend/src/middleware/: auth.middleware.ts
backend/src/routes/: auth.route.ts
backend/src/services/: auth.service.ts
backend/src/utils/: jwt.ts
cpp/: CMakeLists.txt  Makefile  main.cpp
cpp/core/: exercises_generator.cpp  exercises_generator.h  exercises_loader.cpp  exercises_loader.h
cpp/modules/derivative/: generator.cpp  generator.h  verifier.cpp  verifier.h
cpp/modules/integral/: generator.cpp  generator.h  verifier.cpp  verifier.h
cpp/modules/linear/: generator.cpp  generator.h  verifier.cpp  verifier.h
cpp/modules/quadratic/: generator.cpp  generator.h  verifier.cpp  verifier.h
frontend/: .dockerignore  .env.example  Dockerfile  cypress.config.ts  fly.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/cypress/e2e/: login.cy.ts
frontend/src/: .dockerignore  App.vue  Dockerfile  main.ts
frontend/src/api/: api.ts
frontend/src/assets/: categories.json
frontend/src/composables/: useCategories.ts  useExercises.ts
frontend/src/pages/: ComingSoon.vue  (+4 more)
(+23 files in other folders)
